--- a/sources.bib
+++ b/sources.bib
@@ -5,6 +5,13 @@
   year         = {2011}
 }
 
+@book{santos2017dicionario,
+  author       = {dos Santos, Weslei},
+  title = {Dicionário Kawahiva ‐ Português Português ‐ Kawahiva},
+  publisher = {Museu do Índio},
+  year  = {2017}
+}
+
 @article{84075,
   author= {Aragon, Carolina Coelho \& Cabral, Ana Suelly Arruda Câmara},
   journal= {IV Congresso Internacional ABRALIN},
